Swapping gdk-3.0 in for gdk-x11-3.0. Investigating compilation on OS X.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,7 @@ pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0)
 pkg_check_modules(GSTBASE REQUIRED gstreamer-base-1.0)
 pkg_check_modules(GSTAUDIO REQUIRED gstreamer-audio-1.0)
 pkg_check_modules(GSTVIDEO REQUIRED gstreamer-video-1.0)
-pkg_check_modules(GDKX11 REQUIRED gdk-x11-3.0)
+pkg_check_modules(GDK REQUIRED gdk-3.0)
 
 set(CFLAGS
     ${GOBJECT_CFLAGS} ${GOBJECT_CFLAGS_OTHER}
@@ -21,7 +21,7 @@ set(CFLAGS
     ${GSTREAMER_CFLAGS} ${GSTREAMER_CFLAGS_OTHER}
     ${GSTINTERFACES_CFLAGS} ${GSTINTERFACES_CFLAGS_OTHER}
     ${GSTVIDEO_CFLAGS} ${GSTVIDEO_CFLAGS_OTHER}
-    ${GDKX11_CFLAGS} ${GDKX11_CFLAGS_OTHER}
+    ${GDK_CFLAGS} ${GDK_CFLAGS_OTHER}
 )
 add_definitions(${CFLAGS})
 
@@ -35,7 +35,7 @@ set(LIBS
     ${GSTREAMER_LIBRARIES}
     ${GSTINTERFACES_LIBRARIES}
     ${GSTVIDEO_LIBRARIES}
-    ${GDKX11_LIBRARIES}
+    ${GDK_LIBRARIES}
 )
 link_libraries(${LIBS})
 
@@ -49,7 +49,7 @@ set(LIB_PATHS
     ${GSTREAMER_LIBRARY_DIRS}
     ${GSTINTERFACES_LIBRARY_DIRS}
     ${GSTVIDEO_LIBRARY_DIRS}
-    ${GDKX11_LIBRARY_DIRS}
+    ${GDK_LIBRARY_DIRS}
 )
 link_directories(${LIB_PATHS})
 
@@ -69,7 +69,7 @@ PACKAGES
     gstreamer-base-1.0
     gstreamer-audio-1.0
     gstreamer-video-1.0
-    gdk-x11-3.0
+    gdk-3.0
 OPTIONS
     --thread
     --debug
